--- a/index.html
+++ b/index.html
@@ -11,27 +11,12 @@
 
 <body>
     <nav>
-        <div class="row">
-            <div class="col">
-            <div class="metrolics-header">
-            <a href="#">Metrolics</a>
-            <a href="#"><img src="/img/logo.png" width="auto" height="60%"></a>
-            </div>
-        </div>   
-        </div>
-        <div class="row">
-            <div class="col">
-            </div>
-        </div>   
-        </div>        <div class="row">
-            <div class="col">
-            <div class="metrolics-header">
-            <a href="#">Metroloics</a>
-            <a href="#"><img src="/img/logo.png" width="auto" height="60%"></a>
-            </div>
-        </div>   
+        <div class="metrolics-header">
+            <a href="#"></a>
+            <a href="#"><img src="#"></a>
         </div>
         <div class="nav-items">
+
             <div class="nav-button1">
                 <a href="#"><img src="#"></a>
             </div>
@@ -50,25 +35,11 @@
             <div class="nav-buttons5">
                 <a href="#"><img src="#"></a>
             </div>
+
         </div>
     </nav>
 
     <div class="image-slider">
-        <div class="row m-col-3 l-col-2">
-            <div class="col m-row-span">
-                <div class="grid m-col-3">
-                    <div class="col">
-                        <h1></h1>
-                    </div>
-                    <div class="col">
-                        <h1></h1>
-                    </div>
-                    <div class="col">
-                        <h1></h1>
-                    </div>
-                </div>
-
-            </div>
         <div class="slider-image1">
             <a class="M R R" href="#"><img src="#"></a>
         </div>
